--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@stripe/react-stripe-js": "^1.7.0",
+    "@stripe/stripe-js": "^1.26.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
@@ -18,6 +20,7 @@
     "redux-persist": "^6.0.0",
     "reselect": "^4.1.5",
     "sass": "^1.49.9",
+    "stripe": "^8.215.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
