--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "crwn-clothing",
   "version": "0.1.0",
+  "engines": {
+    "node": "16.x"
+  },
   "private": true,
   "dependencies": {
     "@stripe/react-stripe-js": "^1.7.0",
