--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "reselect": "^4.1.5",
     "sass": "^1.49.9",
     "stripe": "^8.215.0",
+    "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
