--- a/package.json
+++ b/package.json
@@ -6,24 +6,24 @@
         "npm": "7.19.1"
     },
     "scripts": {
-      "client": "cd client && npm start",
-      "server": "nodemon server.js",
-      "build": "cd client && npm run build",
-      "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
-      "start": "node server.js",
-      "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
+        "client": "cd client && npm start",
+        "server": "nodemon server.js",
+        "build": "cd client && npm run build",
+        "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
+        "start": "node server.js",
+        "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
     },
     "dependencies": {
-      "body-parser": "^1.20.0",
-      "compression": "1.7.4",
-      "cors": "2.8.5",
-      "dotenv": "16.0.0",
-      "express": "^4.17.3",
-      "stripe": "8.218.0"
+        "body-parser": "^1.20.0",
+        "compression": "1.7.4",
+        "cors": "2.8.5",
+        "dotenv": "16.0.0",
+        "express": "^4.17.3",
+        "express-sslify": "^1.2.0",
+        "stripe": "8.218.0"
     },
     "devDependencies": {
-      "concurrently": "^7.1.0",
-      "nodemon": "^2.0.15"
+        "concurrently": "^7.1.0",
+        "nodemon": "^2.0.15"
     }
-  }
-  
+}
