--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -8,12 +8,12 @@
       "type": "image/x-icon"
     },
     {
-      "src": "crwn-192.png",
+      "src": "192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "crwn-512.png",
+      "src": "512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
