--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.1",
     "firebase": "^9.6.9",
+    "gsap": "^3.11.0",
+    "locomotive-scroll": "^4.1.4",
     "lodash.memoize": "^4.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
