--- a/client/package.json
+++ b/client/package.json
@@ -14,11 +14,13 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.1",
     "firebase": "^9.6.9",
+    "framer-motion": "6.0",
     "gsap": "^3.11.0",
     "locomotive-scroll": "^4.1.4",
     "lodash.memoize": "^4.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-locomotive-scroll": "^0.2.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
