--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "firebase": "^9.6.9",
     "framer-motion": "6.0",
     "gsap": "^3.11.0",
+    "jquery": "^3.6.0",
     "locomotive-scroll": "^4.1.4",
     "lodash.memoize": "^4.1.2",
     "react": "^17.0.2",
